# pvlib-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
benches/: batch_tmy.rs
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-03-28-batch-api-improvements.md
examples/: annual_tmy.rs
src/: albedo.rs  atmosphere.rs  batch.rs  bifacial.rs  clearsky.rs  dirint_coeffs.rs  iam.rs  inverter.rs  iotools.rs  irradiance.rs  ivtools.rs  lib.rs  location.rs  modelchain.rs  pvarray.rs  pvsystem.rs  scaling.rs  shading.rs  singlediode.rs  snow.rs  soiling.rs  solarposition.rs  spectrum.rs  temperature.rs  tracking.rs  transformer.rs
tests/: test_albedo.rs  test_atmosphere.rs  test_batch.rs  test_batch_equivalence.rs  test_clearsky.rs  test_core.rs  test_end_to_end.rs  test_iam.rs  test_inverter_tracking.rs  test_iotools_weather.rs  test_irradiance.rs  test_location.rs  test_modelchain.rs  test_new_modules.rs  test_pvarray.rs  test_pvgis.rs  test_shading.rs  test_singlediode.rs  test_snow.rs  test_soiling.rs  test_solarposition.rs  test_spectrum.rs  test_temperature.rs  test_transformer.rs
