[package]
name = "pvlib-rust"
version = "0.1.0"
edition = "2024"
description = "A Rust port of pvlib-python: solar energy modeling toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p-vbordei/pvlib-rust"
keywords = ["solar", "photovoltaic", "pvlib", "energy", "irradiance"]
categories = ["science", "simulation"]
exclude = ["pvlib-python-ref/**", "pvlib-python-ref/"]

[lib]
name = "pvlib"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
csv = "1.4.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spa = "0.5"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
tempfile = "3"
