[package]
name = "pvlib-rust"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
description = "A Rust port of pvlib-python: solar energy modeling toolkit"
license = "Apache-2.0"
repository = "https://github.com/p-vbordei/pvlib-rust"
homepage = "https://github.com/p-vbordei/pvlib-rust"
documentation = "https://docs.rs/pvlib-rust"
readme = "README.md"
keywords = ["solar", "photovoltaic", "pvlib", "energy", "irradiance"]
categories = ["science", "simulation"]
exclude = [
    "pvlib-python-ref/**",
    "pvlib-python-ref/",
    "docs/**",
    "firebase-debug.log",
    "clippy_output.txt",
]

[lib]
name = "pvlib"

[features]
default = ["pvgis"]
# Network I/O for PVGIS / NREL SAM helpers (pulls in reqwest + TLS stack).
# Disable to build the pure-compute parts of the library with fewer
# transitive dependencies (useful for wasm32-unknown-unknown).
pvgis = ["dep:reqwest"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
csv = "1.4"
rayon = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "webpki-roots"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spa = "0.5"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", default-features = false }
tempfile = "3"

[[bench]]
name = "batch_tmy"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
